--- a/infosys-display/Cargo.toml
+++ b/infosys-display/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["Liam Middlebrook <liammiddlebrook@gmail.com>"]
 [dependencies]
 chrono = "0.3"
 config = "0.6"
-postgres = {version = "0.14", features = ["with-chrono"]}
+postgres = {version = "0.14", features = ["with-chrono", "with-native-tls"]}
